--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-calendars": "^1.188.0",
+    "react-native-events-calendar": "^1.0.8",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-modal": "^11.0.2",
     "react-native-modal-datetime-picker": "^7.4.2",
