--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
+    "react-native-calendar-strip": "^1.3.8",
     "react-native-calendars": "^1.188.0",
     "react-native-events-calendar": "^1.0.8",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-local-notifications": "^2.0.0",
     "react-native-modal": "^11.0.2",
     "react-native-modal-datetime-picker": "^7.4.2",
     "react-native-vector-icons": "^6.5.0",
