--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    implementation project(':lottie-react-native')
     implementation project(':react-native-local-notifications')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-gesture-handler')
