--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.5.0",
     "lodash": "^4.17.11",
+    "lottie-react-native": "^2.6.1",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
@@ -16,9 +17,12 @@
     "react-native-calendars": "^1.188.0",
     "react-native-events-calendar": "^1.0.8",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-loader": "^1.2.1",
     "react-native-local-notifications": "^2.0.0",
+    "react-native-lottie-loader": "0.0.5",
     "react-native-modal": "^11.0.2",
     "react-native-modal-datetime-picker": "^7.4.2",
+    "react-native-simple-toast": "0.0.8",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
