--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,8 +138,14 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-firebase')
+
+    implementation "com.google.android.gms:play-services-base:16.1.0"
+    implementation "com.google.firebase:firebase-core:16.0.9"
+    
+    implementation "com.google.firebase:firebase-messaging:18.0.0"
+
     implementation project(':lottie-react-native')
-    implementation project(':react-native-local-notifications')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-gesture-handler')
     implementation project(':react-native-vector-icons')
@@ -147,7 +153,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
 }
-
+apply plugin: 'com.google.gms.google-services'
 // Run this once to be able to run the application with BUCK
 // puts all compile dependencies into folder libs for BUCK to use
 task copyDownloadableDepsToLibs(type: Copy) {
