--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
     "@react-native-community/async-storage": "^1.5.0",
     "lodash": "^4.17.11",
     "lottie-react-native": "^2.6.1",
+    "moment": "^2.24.0",
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-calendar-strip": "^1.3.8",
     "react-native-calendars": "^1.188.0",
+    "react-native-elements": "^1.1.0",
     "react-native-events-calendar": "^1.0.8",
+    "react-native-firebase": "^5.5.3",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-loader": "^1.2.1",
-    "react-native-local-notifications": "^2.0.0",
     "react-native-lottie-loader": "0.0.5",
     "react-native-modal": "^11.0.2",
     "react-native-modal-datetime-picker": "^7.4.2",
     "react-native-simple-toast": "0.0.8",
+    "react-native-switch-toggle": "^1.1.0",
     "react-native-vector-icons": "^6.5.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
